--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/adapter-pg": "^6.1.0",
+    "@prisma/client": "^6.1.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto": "^1.0.1",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -36,6 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
