Add some toaster to inform user has exist in db + partner created

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/kahwin?schema=public"
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_USER="akihitoyusuke@gmail.com"
+EMAIL_PASS="yaibagokuyondaime"
