--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@types/bcrypt": "^5.0.2",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
